# sslvpn-client

./: .gitignore  BUILD_MSI.md  CMakeLists.txt  LICENSE.rtf  README.md  aVPN.nsi  aVPN.wxs  create_desktop_shortcut.bat  wix_desktop_shortcut.wxs  wix_license.rtf  wix_optimize.wxs  wix_patch.xml
.github/workflows/: build.yml
CMake/Includes/: ProjectExternals_spdlog.cmake  ProjectPackage.cmake
src/: CMakeLists.txt  FileLogger.cpp  avpn.cpp.in  avpn.h  avpn.qrc  cert.cpp  cert.h  common.h  config.h.in  cryptdata.cpp  cryptdata.h  gtdb.cpp  gtdb.h  key.cpp  key.h  keypair.cpp  keypair.h  main.cpp  server_storage.cpp  server_storage.h  timestamp.cpp.in  timestamp.h  vpninfo.cpp  vpninfo.h
src/dialog/: MyCertMsgBox.cpp  MyCertMsgBox.h  MyInputDialog.cpp  MyInputDialog.h  MyMsgBox.cpp  MyMsgBox.h  NewProfileDialog.cpp  NewProfileDialog.ui  VpnProtocolModel.cpp  editdialog.cpp  editdialog.h  editdialog.ui  logdialog.cpp  logdialog.h  logdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
